Move serverconfgis to datapack